<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScheduleActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/month_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/download_anim"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="0.82">

            <ImageButton
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/to_day_table"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/header_text"
                style="bold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="7dp"
                android:layout_weight="8"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <ImageButton
                android:id="@+id/preferences_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/to_preferences"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/download_anim"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/grid_header"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintVertical_weight="0.07">

            <ImageView
                android:id="@+id/download_animation_item"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:alpha="0"
                android:maxHeight="0.8dp"
                android:src="@drawable/schedule_animation_item"
                tools:ignore="ContentDescription" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/grid_header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="6"
            app:layout_constraintBottom_toTopOf="@id/grid"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/download_anim"
            app:layout_constraintVertical_weight="0.36">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/month_item_current_month"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/day_1"
                android:textColor="#FF454545"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/month_item_current_month"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/day_2"
                android:textColor="#FF454545"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/month_item_current_month"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/day_3"
                android:textColor="#FF454545"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/month_item_current_month"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/day_4"
                android:textColor="#FF454545"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/month_item_current_month"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/day_5"
                android:textColor="#FF454545"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/month_item_current_month"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/day_6"
                android:textColor="#FF454545"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <GridLayout
            android:id="@+id/grid"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:columnCount="6"
            android:rowCount="6"
            app:layout_constraintTop_toBottomOf="@+id/grid_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_weight="8.6" >

            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
            <include
                layout="@layout/table_item"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/day_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>